Fix StructuredClone for streams to handle BigInt64Array / BigUint64Array https://bugs.webkit.org/show_bug.cgi?id=227571

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* resources/import-expectations.json:
* web-platform-tests/FileAPI/blob/Blob-constructor.any-expected.txt:
* web-platform-tests/FileAPI/blob/Blob-constructor.any.js:
(test_blob):
* web-platform-tests/FileAPI/blob/Blob-constructor.any.worker-expected.txt:
* web-platform-tests/encoding/encodeInto.any-expected.txt:
* web-platform-tests/encoding/encodeInto.any.js:
(string_appeared_here.forEach.type.string_appeared_here.forEach):
(Float64Array.forEach.view.string_appeared_here.forEach): Deleted.
* web-platform-tests/encoding/encodeInto.any.worker-expected.txt:
* web-platform-tests/encoding/w3c-import.log:
* web-platform-tests/fetch/api/response/response-clone.any-expected.txt:
* web-platform-tests/fetch/api/response/response-clone.any.js:
* web-platform-tests/fetch/api/response/response-clone.any.worker-expected.txt:

Source/WebCore:

While we already support BigInt64Array / BigUint64Array handling even in DOM code,
we lack support of them only in fetch's structuredClone code (which is specialized one
to make it fast by bypassing serialization / deserialization).

This patch fixes the issue to complete BigInt64Array / BigUint64Array in all DOM code.

* Modules/streams/ReadableStreamInternals.js:
(readableStreamTeePullFunction):
(doStructuredClone): Deleted.
* bindings/js/JSDOMGlobalObject.cpp:
(WebCore::JSDOMGlobalObject::addBuiltinGlobals):
* bindings/js/StructuredClone.cpp:
(WebCore::JSC_DEFINE_HOST_FUNCTION):
* bindings/js/StructuredClone.h:
* bindings/js/WebCoreBuiltinNames.h:

Canonical link: https://commits.webkit.org/239539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279769 268f45cc-cd09-0410-ab3c-d52691b4dbfc